--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 :root {
     --H1-TEXT:65px;
     /* --MAIN-COLOR:#537164; */
-    --MAIN-COLOR:#37ca37;
+    --MAIN-COLOR:#81E546;
     --LIGHT-GREEN:#81E546;
     --DARKER-GREEN:#37ca37;
     --SECONDARY-COLOR:rgba(0,0,0,0.8);
@@ -340,7 +340,7 @@ button:active {
 }
 
 .sub-button {
-    width:340px;
+    width:320px;
     height: 55px;
     line-height:50px;
     border-radius:var(--BORDER-RADIUS);
@@ -757,7 +757,7 @@ nav ul li a {
     font-family:"Roboto";
 }
 
-.nav-links > li > a::after {
+nav ul li a::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -771,7 +771,7 @@ nav ul li a {
     z-index: 10;
 }
 
-.nav-links > li > a:hover::after {
+nav ul li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
@@ -907,17 +907,16 @@ nav ul li a {
 }
 
 .dropdown-content {
+    display: none; /* Hide dropdown by default */
     position: absolute;
     top:30px;
     left:-15px;
     width:100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #f9f9f9;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 100;
     text-align: left;
     margin-left:20px;
-    border-bottom-left-radius: var(--BORDER-RADIUS);
-    border-bottom-right-radius: var(--BORDER-RADIUS);
 }
 
 .dropdown-content li {
@@ -934,7 +933,6 @@ nav ul li a {
 
 .dropdown-content a:hover {
     background-color: #f1f1f1; /* Change background color on hover */
-    color:var(--MAIN-COLOR);
 }
 
 /* Show the dropdown when hovering over the dropdown button */
@@ -1086,7 +1084,7 @@ nav ul li a {
 
 #home {
     /* margin-top:80px; */
-    height:85vh;
+    height:80vh;
 }
 
 main {
@@ -1619,17 +1617,10 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding:75px 0 0 0;
-}
-
-.info-bg-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    object-position: center;
-    position: absolute;
-    top:0;
-    left:0;
+    background-image: url('./images/flytt1.jpg');
+    background-position: center;
+    background-size: cover;
+    padding:75px 0;
 }
 
 #info-block-1 {
@@ -2261,14 +2252,14 @@ footer {
     transform: translateY(-50%) rotate(0deg); /* Initial down-pointing position */
     width: 20px; /* Adjust based on your image size */
     height: 20px; /* Adjust based on your image size */
-    background-image: url('https://uploads.staticjw.com/tr/trappstadningistockholm/down-arrow.webp'); /* Path to your white arrow image */
+    background-image: url('./images/down-arrow.png'); /* Path to your white arrow image */
     background-size: contain;
     background-repeat: no-repeat;
     transition: transform 0.3s ease, background-image 0.3s ease;
 }
 .faq-item.active .faq-question::after {
     transform: translateY(-50%) rotate(180deg); /* Rotate image to point up */
-    background-image: url('https://uploads.staticjw.com/tr/trappstadningistockholm/up-arrow.webp'); /* Path to your orange arrow image */
+    background-image: url('./images/up-arrow.png'); /* Path to your orange arrow image */
 }
 .faq-item.active {
     background-color: #fff; /* Ensures background is white when active */
