--- a/style.css
+++ b/style.css
@@ -90,20 +90,12 @@ p {
     color:var(--TEXT-COLOR);
 }
 
-#landing-h1 {
-    font-size:var(--BIG-TEXT) !important;
+.big-paragraph {
+    font-size:var(--BIG-TEXT);
     margin-bottom:0;
     opacity:0;
     animation: fadeInUp 1.5s ease-in-out forwards; /* Apply the animation */
     animation-delay: 0.1s; /* Start animation after h1 is done */
-    font-family: "Montserrat", sans-serif;
-}
-
-#landing-h2 {
-    font-size:var(--H1-TEXT);
-    color:var(--TEXT-COLOR);
-    line-height: 130%;
-    font-family: "Montserrat", sans-serif;
 }
 
 .small-paragraph {
@@ -174,7 +166,6 @@ section {
 .half-section > img {
     width:100%;
     height:auto;
-    margin-left:3px;
 }
 
 .half-section-inner-div{
@@ -340,7 +331,7 @@ button:active {
 }
 
 .sub-button {
-    width:340px;
+    width:320px;
     height: 55px;
     line-height:50px;
     border-radius:var(--BORDER-RADIUS);
@@ -564,7 +555,7 @@ button:active {
     transform:scale(1.05);
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.4); 
     background-color: var(--RED-COLOR);
-    background-color: #e97c3d;
+    background-color: #e9683d;
 }
 100% {
     transform:scale(1);
@@ -711,7 +702,9 @@ nav {
     overflow: visible;
     padding: 10px 20px;
     transition: transform 0.3s ease, background-color 0.3s ease;
-    background-color: rgba(255,255,255,0.8);
+    background-color: transparent;
+    background-color: var(--SOFT-COLOR);
+    background-color:white;
     color: var(--MAIN-COLOR);
     color:var(--TEXT-COLOR);
     z-index: 100;
@@ -757,7 +750,7 @@ nav ul li a {
     font-family:"Roboto";
 }
 
-.nav-links > li > a::after {
+nav ul li a::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -771,7 +764,7 @@ nav ul li a {
     z-index: 10;
 }
 
-.nav-links > li > a:hover::after {
+nav ul li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
@@ -907,17 +900,16 @@ nav ul li a {
 }
 
 .dropdown-content {
+    display: none; /* Hide dropdown by default */
     position: absolute;
     top:30px;
     left:-15px;
     width:100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #f9f9f9;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 100;
     text-align: left;
     margin-left:20px;
-    border-bottom-left-radius: var(--BORDER-RADIUS);
-    border-bottom-right-radius: var(--BORDER-RADIUS);
 }
 
 .dropdown-content li {
@@ -934,7 +926,6 @@ nav ul li a {
 
 .dropdown-content a:hover {
     background-color: #f1f1f1; /* Change background color on hover */
-    color:var(--MAIN-COLOR);
 }
 
 /* Show the dropdown when hovering over the dropdown button */
@@ -1085,8 +1076,8 @@ nav ul li a {
 
 
 #home {
-    /* margin-top:80px; */
-    height:85vh;
+    margin-top:80px;
+    height:75vh;
 }
 
 main {
@@ -1124,7 +1115,7 @@ main {
 }
 
 .landing-margin-left {
-    margin-left:5%;
+    margin-left:7%;
 }
 
 .landing-margin-left-2 {
@@ -1171,7 +1162,6 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-top:80px;
 }
 
 
@@ -1619,17 +1609,10 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding:75px 0 0 0;
-}
-
-.info-bg-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    object-position: center;
-    position: absolute;
-    top:0;
-    left:0;
+    background-image: url('./images/flytt1.jpg');
+    background-position: center;
+    background-size: cover;
+    padding:75px 0;
 }
 
 #info-block-1 {
@@ -1785,8 +1768,6 @@ main {
 .text-section {
     height:auto;
     text-align: center !important;
-    background: rgb(234,232,225) !important;
-background: linear-gradient(335deg, rgba(234,232,225,1) 45%, rgba(255,255,255,1) 80%) !important;
 }
 
 .contact-icon {
@@ -2261,14 +2242,14 @@ footer {
     transform: translateY(-50%) rotate(0deg); /* Initial down-pointing position */
     width: 20px; /* Adjust based on your image size */
     height: 20px; /* Adjust based on your image size */
-    background-image: url('https://uploads.staticjw.com/tr/trappstadningistockholm/down-arrow.webp'); /* Path to your white arrow image */
+    background-image: url('./images/down-arrow.png'); /* Path to your white arrow image */
     background-size: contain;
     background-repeat: no-repeat;
     transition: transform 0.3s ease, background-image 0.3s ease;
 }
 .faq-item.active .faq-question::after {
     transform: translateY(-50%) rotate(180deg); /* Rotate image to point up */
-    background-image: url('https://uploads.staticjw.com/tr/trappstadningistockholm/up-arrow.webp'); /* Path to your orange arrow image */
+    background-image: url('./images/up-arrow.png'); /* Path to your orange arrow image */
 }
 .faq-item.active {
     background-color: #fff; /* Ensures background is white when active */
@@ -2622,7 +2603,6 @@ footer {
     width: 100%;
     margin: 0 auto;
     margin-bottom:20px;
-    justify-content: center;
 }
 
 .quote-line {
